# sim2real

./: .gitignore  README.md  README_zh.md  pyproject.toml  run.sh
checkpoints/lafan-aa/: policy-ec592bb4_lafan_100style_student-5000.yaml
data/robots/g1/: g1-mjlab.xml
docs/: tracking_framework.md  xrobot_grpc_jetpack5.md
docs/getting-started/: root-project.md  teleop-onboard-orin.md
docs/tutorials/: offline-motion-tracking.md  pico-teleoperation.md
docs/zh_CN/getting-started/: root-project.md
docs/zh_CN/tutorials/: offline-motion-tracking.md  pico-teleoperation.md
scripts/: depth_publisher.py  real_bridge.py  test_onnx_inference.py  test_tensorrt_inference.py  vis_imu.py
scripts/publishers/: __init__.py  joint_state_publisher.py  vicon_pose_publisher.py
scripts/vis/: __init__.py  body_pose_viser.py  mujoco_mocap_viewer.py  simple_replay.py
sim2real/: __init__.py
sim2real/config/: __init__.py
sim2real/config/robots/: __init__.py  base.py  g1.py
sim2real/rl_policy/: __init__.py  base_policy.py  carry.py  tracking.py
sim2real/rl_policy/observations/: __init__.py  base.py  common.py  depth.py  track.py
sim2real/rl_policy/utils/: __init__.py  command_sender.py  motion.py  motion_buffer.py  onnx_module.py  state_processor.py
sim2real/sim_env/: __init__.py  base_sim.py
sim2real/sim_env/utils/: __init__.py  (+1 more)
sim2real/teleop/: README.md  __init__.py  benchmark_smplx_retarget.py  mujoco_viewer_utils.py  pico_g1_zmq_publisher.py  pico_g1_zmq_viewer.py  pyproject.toml  record_xrobot_smplx.py
sim2real/utils/: common.py  robot_defs.py  strings.py
(+5 files in other folders)
